# legacy-node-indexer

./: Cargo.toml  README.md
indexer-lib/: Cargo.toml
indexer-lib/src/: extension.rs  lib.rs
node-indexer/: Cargo.toml
node-indexer-test/: Cargo.toml
node-indexer-test/src/: main.rs
node-indexer/src/: lib.rs
