[package]
name = "indexer-lib"
version = "0.2.0"
authors = ["Vladimir Petrzhikovskiy <v.petrzhikovskiy@dexpa.io>"]
edition = "2018"

[dependencies]
log = "0.4.14"
anyhow = "1.0.40"
thiserror = "1.0.25"
serde = { version = "1.0.126", features = ["derive"] }

ton_abi = { git = "https://github.com/tonlabs/ton-labs-abi", rev = "a2b2a9dc2e8c30a070e9af79cf0c24a55bdd5a87" }
ton_block = { git = "https://github.com/tonlabs/ton-labs-block.git" }
ton_types = { git = "https://github.com/tonlabs/ton-labs-types.git" }

nekoton-utils = { git = "https://github.com/broxus/nekoton.git" }

[dev-dependencies]
env_logger = "0.9.0"
