[package]
name = "indexer-lib"
version = "0.2.0"
authors = ["Vladimir Petrzhikovskiy <v.petrzhikovskiy@dexpa.io>"]
edition = "2018"

[dependencies]
log = "0.4.14"
anyhow = "1.0.40"
thiserror = "1.0.25"
serde = { version = "1.0.126", features = ["derive"] }

ton_abi = { git = "https://github.com/broxus/ton-labs-abi" }
ton_block = { git = "https://github.com/broxus/ton-labs-block.git" }
ton_types = { git = "https://github.com/broxus/ton-labs-types.git" }

nekoton-utils = { git = "https://github.com/broxus/nekoton.git" }

[dev-dependencies]
env_logger = "0.9.0"
