[package]
name = "node-indexer-test"
version = "0.1.0"
edition = "2018"

[dependencies]
anyhow = "1.0.41"
chrono = "0.4.19"
env_logger = "0.8.4"
futures = "0.3.15"
hex = "0.4.3"
log = "0.4.14"
tokio = { version = '1', features = ['full'] }

node-indexer = { path = "../node-indexer" }
indexer-lib = { path = "../indexer-lib" }

ton_abi = { git = "https://github.com/broxus/ton-labs-abi" }
ton_block = { git = "https://github.com/broxus/ton-labs-block.git" }
ton_types = { git = "https://github.com/broxus/ton-labs-types.git" }
nekoton = { git = "https://github.com/broxus/nekoton.git", default-features = false }

[dependencies.ton_api]
git = "https://github.com/broxus/ton-labs-tl.git"
package = "ton_api"
features = ["lite_api", "ton_api"]

